Fixed z-index of label renderer.

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   font-weight: 400;
   font-size: 1.2rem;
   user-select: none;
+  z-index: 2;
 }
 
 .logo_app {
@@ -13,6 +14,7 @@
   top: 20px;
   right: 20px;
   user-select: none;
+  z-index: 2;
 }
 
 .contenedor_principal {
@@ -20,6 +22,7 @@
   margin-top: 60px;
   position: absolute;
   color: #d9d9d9;
+  z-index: 2;
 }
 .mision {
   max-height: 0;
@@ -32,8 +35,6 @@
   background-color: rgb(34, 34, 34, 0.8);
   border-radius: 3px; /* Agrega bordes redondos */
   user-select: none;
-  
-
 }
 
 .mostrar_misiones {
@@ -75,7 +76,7 @@
 .mision.show {
   max-height: 200px; /* Establece una altura máxima para mostrar las misiones */
   opacity: 1; /* Cambia la opacidad para mostrar las misiones */
-  
+  user-select: all;
 }
 
 .logo_app img {
@@ -99,6 +100,7 @@
   align-items: flex-end;
   font-size: 4px;
   user-select: none;
+  z-index: 2;
 }
 
 .controlador-regiones {
@@ -111,6 +113,7 @@
   align-items: flex-end;
   font-size: 4px;
   user-select: none;
+  z-index: 2;
 }
 
 .controlador div {
@@ -159,7 +162,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.7);
-    z-index: 1;
+    z-index: 10;
   }
 
   @media (min-width: 768px) {
@@ -344,10 +347,11 @@
   padding: 12px;
   border-radius: 5px;
   position: absolute;
-  top: 70px;
+  top: 6.5rem;
   right: 20px;
   min-height: 75px;
   min-width: 170px;
+  z-index: 2;
 }
 
 .selected_info_placeholder {
