--- a/src/components/moon.css
+++ b/src/components/moon.css
@@ -28,7 +28,8 @@
   }
 
   .latLongLabelDiv {
-    background-color: rgba(235, 235, 235, 0.623);
+    background-color: rgba(235, 235, 235, 0.479);
     padding: 4px 5px 4px 5px;
     border-radius: 10px;
+    z-index: 1;
   }
